[package]
name = "ezcmd"
description = "An opinionated wrapper around `std::process::Command` optimized for brevity and clear errors"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ErichDonGubler/ezcmd"

[dependencies]
log = "0.4.17"
shell-words = "1.1.0"
thiserror = "2.0.12"
